--- a/www/css/index.css
+++ b/www/css/index.css
@@ -30,18 +30,42 @@
 
 .homeInfo
 {
-    margin-top: 50px;
-    font-size: 25px;
-    text-align: center;
-    text-decoration: underline;
+    margin-top: 27px;
+    font-size: 34px;
+
+    color: #A32271;
+    font-weight: 300;
+    padding: 0 20px;
+    line-height: 43px;
+
 }
 
 .homeDetails
 {
-    margin-top: 100px;
-    font-size: 15px;
+    margin-top: 10%;
+    color: #313131;
+    text-align: inherit;
 
 }
+.basicText
+{
+    color: #313131;
+    font-size: 18px;
+    padding: 0 20px;
+    font-size: 18px;
+}
+
+.homeFooter
+{
+    font-size: 14px;
+    position: absolute;
+    bottom: -14px;
+    background-color: #A32271;
+    color: #FFFFFF;
+    padding: 20px;
+}
+
+
 
 
 body {
@@ -60,7 +84,7 @@ body {
         color-stop(0.51, #E4E4E4)
     );
     background-attachment:fixed;*/
-    font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size:12px;
     height:100%;
     margin:0px;
