--- a/www/css/index.css
+++ b/www/css/index.css
@@ -47,12 +47,39 @@
     text-align: inherit;
 
 }
+
+.combobox select {
+   background: transparent;
+   width: 268px;
+
+   font-size: 16px;
+   line-height: 1;
+   border: 0;
+   border-radius: 0;
+   height: 34px;
+   -webkit-appearance: none;
+}
+
+.combobox {
+   width: 240px;
+   height: 34px;
+   overflow: hidden;
+   background: url(new_arrow.png) no-repeat right #ddd;
+   border: 1px solid #ccc;
+   padding: 0 20px;
+   margin: 0 20px;
+   margin-top: 10px;
+}
+
+
 .basicText
 {
     color: #313131;
     font-size: 18px;
     padding: 0 20px;
     font-size: 18px;
+    display: block;
+    margin-top: 20px;
 }
 
 .homeFooter
@@ -60,6 +87,7 @@
     font-size: 14px;
     position: absolute;
     bottom: -14px;
+    width: 100%;
     background-color: #A32271;
     color: #FFFFFF;
     padding: 20px;
