--- a/www/css/index.css
+++ b/www/css/index.css
@@ -20,7 +20,40 @@
     -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
 }
 
-
+.header {
+    width: 100%;
+    height: 50px;
+    background: blue;
+}
+.nav-toggle {
+    color: #fff;
+    line-height: 50px;
+    padding-left: 20px;
+}
+.nav {
+    height: 0;
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
+    text-shadow: none;
+}
+.nav-container:hover .nav {
+    height: auto;
+}
+.nav li {
+    list-style-type: none;
+    height: 50px;
+    background: grey;
+    line-height: 50px;
+    border-bottom: 1px solid #fff;
+    padding-left: 20px;
+    position: relative;
+    z-index: 100;
+}
+.nav li a {
+    color: #fff;
+    text-decoration: none;              
+}
 .homeImage
 {
     width:100%;
