--- a/www/css/index.css
+++ b/www/css/index.css
@@ -23,7 +23,7 @@
 .header {
     width: 100%;
     height: 50px;
-    background: blue;
+    background: #A32271;
 }
 .nav-toggle {
     color: #fff;
