--- a/www/css/index.css
+++ b/www/css/index.css
@@ -20,6 +20,29 @@
     -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
 }
 
+
+.label {
+    display: block;
+    padding-left: 20px;
+    text-indent: -15px;
+
+}
+.checkbox {
+
+    padding-left: 10px!;
+    margin-left: 20px!;
+    width: 13px;
+    height: 13px;
+    padding: 0;
+    margin:0;
+    vertical-align: bottom;
+    position: relative;
+    top: -1px;
+    *overflow: hidden;
+}
+
+
+
 .header {
     width: 100%;
     height: 50px;
