--- a/www/css/index.css
+++ b/www/css/index.css
@@ -21,6 +21,18 @@
 }
 
 
+
+.next {
+    width: 43px;
+    height: 44px;
+    background: url(./img/nextprev.png);
+}
+
+.prev {
+
+}
+
+
 .label {
     display: inline !important;
     padding-left: 20px;
